--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,17 +1,24 @@
-/* reset */
+@import "mixins";
+@import "variables";
 
-html {
+@import "Header";
+@import "Filters";
+@import "CharacterList";
+@import "CharacterCard";
+@import "CharacterDetail";
+
+body {
   background-color: black;
-  color: white;
+  width: 100%;
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 
-
 .container {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
