--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,24 +1,21 @@
-@import "mixins";
 @import "variables";
+@import "mixins";
+@import "reset";
 
 @import "Header";
 @import "Filters";
 @import "CharacterList";
 @import "CharacterCard";
-@import "CharacterDetail";
 
 body {
   background-color: black;
   width: 100%;
+  box-sizing: border-box;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-}
-
-.container {
+.page {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 5rem;
 }
