--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -12,7 +12,7 @@ $colorLightGreyBlue: #00cad1;
 
 // fonts
 
-$fontFamilyTitle: "Montserrat", sans-serif;
+$fontFamily: "Montserrat", sans-serif;
 
 $fontSizeTitle: 1.8rem;
 $fontSizeText: 1.6rem;
