--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -1,24 +1,19 @@
 // color
 
 $colorBlack: #000000;
-$colorLightGrey: #f5f5f5;
+$colorWhite: #ffffff;
 $colorGrey: #6b6b6b;
 $colorDarkGrey: #54585a;
-$colorDarkGreenBlue: #114e4e;
-$colorBlue: #438792;
+$colorBlue: #4be7ff;
 $colorGreen: #00c800;
-$colorWhite: #ffffff;
-$colorLightGreyBlue: #00cad1;
 
 // fonts
 
 $fontFamily: "Montserrat", sans-serif;
 
-$fontSizeTitle: 1.8rem;
-$fontSizeText: 1.6rem;
 $fontSizeCardTitle: 1.8rem;
-$fontSizeCardText: 1.4rem;
+$fontSizeCardText: 1.6rem;
 
-$fontWeightCardTitle: 600;
+$fontWeightCard: 600;
 
-$textTransformTitle: center;
+$textTransformCard: center;
