--- a/src/stylesheets/mixins.scss
+++ b/src/stylesheets/mixins.scss
@@ -1,44 +1,57 @@
 @mixin CardTitle {
+  color: $colorWhite;
   font-family: $fontFamily;
   font-size: $fontSizeCardTitle;
-  font-weight: $fontWeightCardTitle;
-  color: $colorDarkGrey;
-  text-align: $textTransformTitle;
+  font-weight: $fontWeightCard;
+  text-align: $textTransformCard;
   padding: 0.5rem;
 }
 
 @mixin CardText {
+  color: $colorWhite;
   font-family: $fontFamily;
   font-size: $fontSizeCardText;
-  font-weight: $fontWeightCardTitle;
-  color: $colorDarkGrey;
-  text-align: $textTransformTitle;
+  font-weight: $fontWeightCard;
+  text-align: $textTransformCard;
 }
 
 @mixin CardsIcons {
-  font-weight: $fontWeightCardTitle;
+  color: $colorWhite;
   font-family: $fontFamily;
   font-size: $fontSizeCardText;
-  color: $colorDarkGrey;
-  text-align: $textTransformTitle;
+  font-weight: $fontWeightCard;
+  text-align: $textTransformCard;
 }
 
 @mixin InputSearch {
   width: 30rem;
   height: 4rem;
   margin: 3rem 0 4rem;
-  text-align: $textTransformTitle;
-  border: 0.3rem solid $colorGreen;
-  background-color: $colorBlack;
+  color: $colorDarkGrey;
   font-family: $fontFamily;
   font-size: $fontSizeCardTitle;
-  color: $colorDarkGrey;
+  border: 0.3rem solid $colorGreen;
+  background-color: $colorBlack;
+  text-align: $textTransformCard;
+
+  &:focus {
+    background-color: $colorGreen;
+    box-shadow: 0.2rem 0.2rem 2.5rem $colorWhite;
+    transition-duration: 0.4s;
+  }
 }
 
 @mixin CardButton {
-  font-size: 2rem;
-  background-color: $colorLightGreyBlue;
   border: none;
   border-radius: 50%;
+  color: $colorWhite;
+  font-size: $fontSizeCardTitle;
+  background-color: $colorBlue;
   padding: 1rem;
+
+  &:hover {
+    background-color: $colorGreen;
+    box-shadow: 0.2rem 0.2rem 2.5rem $colorWhite;
+    transition-duration: 0.4s;
+  }
 }
