Change font in card and title

--- a/src/stylesheets/mixins.scss
+++ b/src/stylesheets/mixins.scss
@@ -27,9 +27,10 @@
   width: 30rem;
   height: 4rem;
   margin: 3rem 0 4rem;
-  color: $colorDarkGrey;
+  color: $colorWhite;
   font-family: $fontFamily;
   font-size: $fontSizeCardTitle;
+  border-radius: 1rem;
   border: 0.3rem solid $colorGreen;
   background-color: $colorBlack;
   text-align: $textTransformCard;
