--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -9,10 +9,10 @@ $colorGreen: #00c800;
 
 // fonts
 
-$fontFamily: "Montserrat", sans-serif;
+$fontFamily: "Gugi", cursive;
 
-$fontSizeCardTitle: 2rem;
-$fontSizeCardText: 1.6rem;
+$fontSizeCardTitle: 1.8rem;
+$fontSizeCardText: 1.4rem;
 
 $fontWeightCard: 600;
 
