--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -14,8 +14,7 @@ body {
 }
 
 .page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
   padding: 5rem;
+  text-align: $textTransform;
 }
