Bonus to fliter by gender

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -8,7 +8,7 @@
 @import "CharacterCard";
 
 body {
-  background-color: black;
+  background-color: $colorBlack;
   width: 100%;
   box-sizing: border-box;
 }
