--- a/src/stylesheets/Filters.scss
+++ b/src/stylesheets/Filters.scss
@@ -11,7 +11,7 @@
       margin: 0rem 1.5rem;
       color: $colorWhite;
       font-family: $fontFamily;
-      font-size: $fontSizeCardTitle;
+      font-size: $fontSizeCardText;
     }
   }
 
