--- a/src/stylesheets/CharacterCard.scss
+++ b/src/stylesheets/CharacterCard.scss
@@ -4,7 +4,6 @@
   justify-content: center;
   border-radius: 1.5rem;
   margin: 2rem;
-  border: $colorGreen 0.3rem solid;
   background-color: $colorBlue;
   width: 18rem;
 
@@ -13,13 +12,13 @@
   }
 
   &__image {
-    border-top-left-radius: 1rem;
-    border-top-right-radius: 1rem;
+    border-radius: 1.5rem;
     width: 100%;
   }
 
   &:hover {
     background-color: $colorGreen;
+    border: $colorGreen 0.5rem solid;
     box-shadow: 0.2rem 0.2rem 2.5rem $colorWhite;
     transition-duration: 0.4s;
   }
