--- a/src/stylesheets/mixins.scss
+++ b/src/stylesheets/mixins.scss
@@ -4,7 +4,8 @@
   font-size: $fontSizeCardTitle;
   font-weight: $fontWeightCard;
   text-align: $textTransform;
-  padding: 0.5rem;
+  padding: 1rem;
+  margin: 0;
 }
 
 @mixin CardText {
